deployment/traefik-backend-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: ec.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 8080
